# Gilder

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: ci.yml
artifacts/we-3742497499-js/: README.md  all-scripts.concatenated.js  manifest.json
artifacts/we-3742497499-js/scripts/: 001__source-261__prop-ui_editor_properties_5_sector_1___unknown__ae51d52fe2a3.js  002__source-1146__prop-visible__胳膊外腿__a0d8243be2ac.js  003__source-1148__prop-visible__内腿__a0d8243be2ac.js  004__source-1150__prop-visible__尾巴__a0d8243be2ac.js  005__source-947__prop-visible__胳膊外腿__a0d8243be2ac.js  006__source-951__prop-visible__内腿__a0d8243be2ac.js  007__source-953__prop-visible__尾巴__a0d8243be2ac.js  008__source-1090__prop-parallaxDepth__unknown__e7aae0317461.js  009__source-1090__prop-visible__unknown__905088f5a51c.js  010__source-107__prop-angles__x1__a7105e20413c.js  011__source-107__prop-origin__x1__dfa2f1c8ddcc.js  012__source-985__prop-text__Time-and-Date__671726fc05e8.js  013__source-602__prop-angles__unknown__a7105e20413c.js  014__source-602__prop-origin__unknown__dfa2f1c8ddcc.js  015__source-601__prop-angles__unknown__a7105e20413c.js  016__source-601__prop-origin__unknown__dfa2f1c8ddcc.js  017__source-96__prop-angles__x1__a7105e20413c.js  018__source-96__prop-origin__x1__dfa2f1c8ddcc.js  019__source-3465__prop-text__unknown__d604402eacf9.js  020__source-955__prop-text__unknown__d604402eacf9.js  021__source-99__prop-angles__x1__a7105e20413c.js  022__source-99__prop-origin__x1__dfa2f1c8ddcc.js  023__source-110__prop-angles__x2__a7105e20413c.js  024__source-110__prop-origin__x2__dfa2f1c8ddcc.js  025__source-97__prop-angles__x2__a7105e20413c.js  026__source-97__prop-origin__x2__dfa2f1c8ddcc.js  027__source-113__prop-angles__x3__a7105e20413c.js  028__source-113__prop-origin__x3__dfa2f1c8ddcc.js  029__source-98__prop-angles__x3__a7105e20413c.js  030__source-98__prop-origin__x3__dfa2f1c8ddcc.js  031__source-100__prop-angles__x3__a7105e20413c.js  032__source-100__prop-origin__x3__dfa2f1c8ddcc.js  033__source-298__prop-origin__水珠2__dfa2f1c8ddcc.js  034__source-321__prop-origin__水珠2__dfa2f1c8ddcc.js  035__source-345__prop-origin__水珠3__dfa2f1c8ddcc.js  036__source-309__prop-origin__水珠__dfa2f1c8ddcc.js  037__source-365__prop-origin__水珠__dfa2f1c8ddcc.js  038__source-368__prop-origin__水珠4__dfa2f1c8ddcc.js  039__source-1310__prop-origin__水珠5__dfa2f1c8ddcc.js  040__source-652__prop-text__小文字__4a3a5615a692.js  (+25 more)
artifacts/we-3742497499-js/unique/: 001__4a3a5615a692.js  002__5143dcdbc507.js  003__671726fc05e8.js  004__88b98570c441.js  005__905088f5a51c.js  006__a0d8243be2ac.js  007__a7105e20413c.js  008__ae51d52fe2a3.js  009__d604402eacf9.js  010__dfa2f1c8ddcc.js  011__e7aae0317461.js
completions/bash/: gilder-convert  gilderctl
completions/zsh/: _gilder-convert  _gilderctl
docs/: conversion.md  design.md  format.md  ipc.md  m8-video-optimization-plan.md  native-vulkan-scene-refactor-goals.md  native-vulkan-video.md  native-vulkan-we-effect-graph-mainline.md  native-vulkan-we-eye-closed-frame-root-cause.md  native-vulkan-we-eye-first-class-handoff.md  native-vulkan-we-eye-iris-mask-uv-root-cause.md  native-vulkan-we-eye-mdle-inverse-bind-root-cause.md  native-vulkan-we-eye-original-semantics.md  native-vulkan-we-eye-render-composite-root-cause.md  native-vulkan-we-water-rectangle-root-cause.md  packaging.md  todo.md  video-validation.md  vulkan-migration.md  vulkan-video-decode-fixes.md  wallpaper-types.md
docs/man/: gilder-convert.1  gilderctl.1  gilderd.1
examples/: wayland-memory-budget.example.csv
examples/wallpapers/: README.md
examples/wallpapers/shader-demo.gwpdir/: manifest.gilder.json
examples/wallpapers/slideshow-demo.gwpdir/: manifest.gilder.json
examples/wallpapers/static-demo.gwpdir/: manifest.gilder.json
packaging/: build-dist.sh
packaging/systemd/: gilder.service
scripts/: check_eye_alpha.py  check_mask_values.py  desktop-policy-smoke.sh  eye_opacity_check.py  eye_pixel_simulation.py  eye_skinning_compare.py  install-ci-deps-ubuntu.sh  install-video-codec-smoke-deps-arch.sh  install-video-codec-smoke-deps-ubuntu.sh  install-wayland-video-smoke-deps-arch.sh  mdle_compare.py  native-vulkan-audio-clock-probe.sh  native-vulkan-av1-bitstream-smoke.sh  native-vulkan-av1-ready-prefix-video-smoke.sh  native-vulkan-av1-visible-video-smoke.sh  native-vulkan-h264-bitstream-smoke.sh  native-vulkan-h264-first-frame-smoke.sh  native-vulkan-h264-idr-prefix-smoke.sh  native-vulkan-h264-ready-prefix-smoke.sh  native-vulkan-h264-ready-prefix-video-smoke.sh  native-vulkan-h264-visible-video-smoke.sh  native-vulkan-h265-first-frame-video-smoke.sh  native-vulkan-h265-main10-bitstream-smoke.sh  native-vulkan-h265-main10-visible-video-smoke.sh  native-vulkan-h265-ready-prefix-smoke.sh  native-vulkan-h265-ready-prefix-video-smoke.sh  native-vulkan-ready-prefix-video-common.sh  native-vulkan-real-source-matrix.sh  native-vulkan-surface-video-queue-smoke.sh  native-vulkan-visible-codec-smoke.sh  native-wayland-video-smoke.sh  native-wgpu-smoke.sh  performance-decision-summary.awk  performance-snapshot.sh  scene-puppet-verify.py  video-codec-smoke.sh  wallpaper-engine-workshop-download.sh  wayland-baseline-matrix.sh  wayland-video-sink-spike.sh  wayland-video-surface-smoke.sh
src/: adaptive.rs  config.rs  convert.rs  core.rs  desktop.rs  ipc.rs  lib.rs  policy.rs  renderer.rs  state.rs
src/config/: paths.rs  settings.rs
src/convert/: wallpaper_engine.rs
src/convert/wallpaper_engine/: effect.rs  gtex.rs  ir.rs  (+4 more)
src/core/: format.rs  manifest.rs  package.rs  path.rs  scene.rs  scene_lite.rs
src/desktop/: adapters.rs  power.rs  session.rs
src/ipc/: command.rs  protocol.rs  socket.rs
src/renderer/: gtk.rs  native_vulkan.rs  native_wayland.rs  native_wgpu.rs  scene_binary.rs  scene_display.rs  scene_lite_display.rs  scene_runtime.rs  video.rs
src/state/: model.rs  store.rs
(+237 files in other folders)
