[package]
name = "gilder"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/elel-code/Gilder"
homepage = "https://github.com/elel-code/Gilder"
rust-version = "1.96"

[features]
default = []
gtk-renderer = ["dep:gtk", "dep:gtk4-layer-shell"]
native-wayland-renderer = [
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-protocols",
]
video-renderer = ["dep:gstreamer"]

[[bin]]
name = "gilderd"
path = "src/bin/gilderd.rs"

[[bin]]
name = "gilderctl"
path = "src/bin/gilderctl.rs"

[[bin]]
name = "gilder-convert"
path = "src/bin/gilder-convert.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_8"], optional = true }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"], optional = true }
gstreamer = { version = "0.25", optional = true }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = { version = "0.20", optional = true }
toml = "1"
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
zip = { version = "4", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "warn"
