[package]
name = "gilder"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/elel-code/Gilder"
homepage = "https://github.com/elel-code/Gilder"
rust-version = "1.96"

[features]
default = []
gtk-renderer = ["dep:gtk", "dep:gtk4-layer-shell"]
native-wayland-renderer = [
    "dep:rustix",
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-protocols",
]
native-wgpu-renderer = [
    "native-wayland-renderer",
    "dep:pollster",
    "dep:raw-window-handle",
    "dep:wgpu",
]
native-vulkan-renderer = ["native-wayland-renderer", "dep:ash", "dep:image"]
native-wgpu-gst-dmabuf = ["native-wgpu-renderer", "video-renderer", "dep:ash"]
video-renderer = ["dep:gstreamer", "dep:gstreamer-video", "dep:libc"]

[[bin]]
name = "gilderd"
path = "src/bin/gilderd.rs"

[[bin]]
name = "gilderctl"
path = "src/bin/gilderctl.rs"

[[bin]]
name = "gilder-convert"
path = "src/bin/gilder-convert.rs"

[[bin]]
name = "gilder-native-video"
path = "src/bin/gilder-native-video.rs"
required-features = ["native-wayland-renderer", "video-renderer"]

[[bin]]
name = "gilder-native-wgpu"
path = "src/bin/gilder-native-wgpu.rs"
required-features = ["native-wgpu-renderer"]

[[bin]]
name = "gilder-native-vulkan"
path = "src/bin/gilder-native-vulkan.rs"
required-features = ["native-vulkan-renderer"]

[dependencies]
ash = { version = "0.38", optional = true }
gtk = { package = "gtk4", version = "0.11", features = ["v4_8"], optional = true }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"], optional = true }
gstreamer = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"], optional = true }
jiff = "0.2"
libc = { version = "0.2", optional = true }
pollster = { version = "0.4", optional = true }
raw-window-handle = { version = "0.6.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = { version = "0.20", optional = true }
rustix = { version = "1.1", features = ["event"], optional = true }
toml = "1"
wayland-client = { version = "0.31", features = ["system", "libwayland_1_23"], optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
wgpu = { version = "29", default-features = false, features = ["std", "vulkan", "wgsl"], optional = true }
zip = { version = "4", default-features = false, features = ["deflate"] }

[patch.crates-io]
wgpu-hal = { path = "vendor/wgpu-hal-29.0.3" }

[lints.rust]
unsafe_code = "warn"
