[package]
name = "gilder"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/elel-code/Gilder"
homepage = "https://github.com/elel-code/Gilder"
rust-version = "1.96"

[features]
default = []
native-wayland-renderer = [
    "dep:rustix",
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-protocols",
]
native-vulkan-renderer = [
    "native-wayland-renderer",
    "dep:image",
    "dep:vulkanalia",
]
native-vulkan-gst-video = ["native-vulkan-renderer", "video-renderer"]
native-vulkan-gst-cuda = ["native-vulkan-gst-video"]
native-vulkan-gst-va = ["native-vulkan-gst-video"]
native-vulkan-vulkanalia = ["native-vulkan-renderer"]
video-renderer = ["dep:gstreamer", "dep:gstreamer-video"]

[[bin]]
name = "gilderd"
path = "src/bin/gilderd.rs"

[[bin]]
name = "gilderctl"
path = "src/bin/gilderctl.rs"

[[bin]]
name = "gilder-convert"
path = "src/bin/gilder-convert.rs"

[[bin]]
name = "gilder-native-vulkan"
path = "src/bin/gilder-native-vulkan.rs"
required-features = ["native-vulkan-renderer"]

[dependencies]
gstreamer = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"], optional = true }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = { version = "0.20", optional = true }
rustix = { version = "1.1", features = ["event"], optional = true }
toml = "1"
vulkanalia = { version = "0.35", features = ["libloading"], optional = true }
wayland-client = { version = "0.31", features = ["system", "libwayland_1_23"], optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }
zip = { version = "4", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "warn"
